build with graal, add sending notification of changes to rabbit